--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
        
         <aside class="sidebar">
-            <img src='' alt="photo" class="photo">
+            <img src='images/photo_2022-09-28_12-20-31.jpg' alt="photo" class="photo">
            
             <div class="contacts">
                 <h3 class="sidebar-title">Contacts</h3>
