--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
                     </li>
                     <li class="project-item">
                         <div class="project">
-                            <a href="https://acvetochka.github.io/mimino/" target="_blank"
+                            <a href="https://vyevheniia.github.io/parcel-project-mimino-team4/" target="_blank"
                                 class="project-link">Mimino</a>
-                            <a href="https://github.com/acvetochka/mimino/" target="_blank"
+                            <a href="https://github.com/VYevheniia/parcel-project-mimino-team4" target="_blank"
                                 class="project-link">Link</a>
                             <span class="project-bracket"> [HTML5, SCSS, JS, Parcel-Project-Template] </span>
                         </div>
