--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <li class="education-item">
                         <h4 class="education-uni">Kherson State University </h4>
                         <p class="education-spec">Specialist`s degree in the field of study of Translation (English, German)</p>
-                        <p class="period">November 2022 - October 2023 <span class="line">| </span> Kyiv, Ukraine</p>
+                        <p class="period">2011 - 2016 <span class="line">| </span> Kherson, Ukraine</p>
                     </li>
                 </ul>
             </section>
